[gd_scene load_steps=13 format=3 uid="uid://dl2ed4gkybggf"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ffboj"]
[ext_resource type="Texture2D" uid="uid://8ggihh27mlrr" path="res://sprites/blob_shadow.png" id="3_0c7wt"]
[ext_resource type="PackedScene" uid="uid://ccka7bny56lv6" path="res://objects/playermesh.tscn" id="4_h1gcy"]
[ext_resource type="ArrayMesh" uid="uid://deu06eho4c74" path="res://meshes/dust.res" id="4_mvhqy"]
[ext_resource type="Shader" path="res://swapeffect.gdshader" id="4_vbki5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gdq8c"]
radius = 0.3
height = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q7stj"]
diffuse_mode = 2
specular_mode = 2
metallic_specular = 0.0
backlight = Color(0, 0.521569, 0.709804, 1)
billboard_keep_scale = true
grow_amount = 1.882
proximity_fade_distance = 0.25

[sub_resource type="Curve" id="Curve_xh1e2"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.249284, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="TorusMesh" id="TorusMesh_lrtwo"]
inner_radius = 0.98

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3stdq"]
vertex_color_use_as_albedo = true
albedo_color = Color(0.666667, 0.780392, 1, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_as8ww"]
render_priority = 0
shader = ExtResource("4_vbki5")
shader_parameter/col_distance_scale = 8.0
shader_parameter/col_near = Color(0.235294, 0.72549, 0.839216, 1)
shader_parameter/col_far = Color(0, 0, 0, 1)
shader_parameter/emission_boost = 2.0
shader_parameter/sphere_radius = 0.4
shader_parameter/noise_scale = 3.0
shader_parameter/detail = 6
shader_parameter/rough = 0.5
shader_parameter/inflate = 0.1
shader_parameter/smooth_fac = 0.75
shader_parameter/step_mult = 0.26

[sub_resource type="BoxMesh" id="BoxMesh_2uy2n"]
material = SubResource("ShaderMaterial_as8ww")
size = Vector3(1.5, 1, 1.5)

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_ffboj")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
shape = SubResource("CapsuleShape3D_gdq8c")

[node name="Shadow" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9, 0)
size = Vector3(1, 2, 1)
texture_albedo = ExtResource("3_0c7wt")
modulate = Color(1, 1, 1, 0.705882)
normal_fade = 0.5

[node name="ParticlesTrail" type="CPUParticles3D" parent="."]
visible = false
material_override = SubResource("StandardMaterial3D_q7stj")
cast_shadow = 0
amount = 60
mesh = ExtResource("4_mvhqy")
emission_shape = 1
emission_sphere_radius = 0.2
particle_flag_align_y = true
direction = Vector3(0, 0, 0)
gravity = Vector3(0, 0.1, 0)
scale_amount_min = 0.75
scale_amount_curve = SubResource("Curve_xh1e2")

[node name="SwapCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="SpellIndicator" type="MeshInstance3D" parent="."]
transform = Transform3D(-10, 0, 8.74228e-07, 0, 0.14, 0, -8.74228e-07, 0, -10, 0, 0.1, 0)
visible = false
mesh = SubResource("TorusMesh_lrtwo")
surface_material_override/0 = SubResource("StandardMaterial3D_3stdq")

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="Character" parent="." instance=ExtResource("4_h1gcy")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="Skeleton3D" parent="Character/metarig_001" index="0"]
bones/5/rotation = Quaternion(-0.833055, -1.77112e-14, -1.98616e-07, 0.55319)
bones/6/rotation = Quaternion(-0.224974, -4.14503e-15, -5.36381e-08, 0.974365)
bones/7/rotation = Quaternion(-0.0840949, -3.25702e-24, -2.00498e-08, 0.996458)
bones/8/rotation = Quaternion(-0.0198124, 0.0938115, -0.723663, 0.683461)
bones/9/rotation = Quaternion(0.142623, -0.0726654, 0.0180554, 0.986941)
bones/10/rotation = Quaternion(-0.00343127, 0.0109415, -0.0211005, 0.999712)
bones/11/rotation = Quaternion(-0.0198125, -0.0938117, 0.723663, 0.683461)
bones/12/rotation = Quaternion(0.142623, 0.0726655, -0.0180554, 0.986941)
bones/12/scale = Vector3(1, 1, 1)
bones/13/rotation = Quaternion(-0.00343126, -0.0109415, 0.0211005, 0.999712)
bones/14/rotation = Quaternion(0.996866, 0.0301062, -0.00423716, 0.073039)
bones/14/scale = Vector3(1, 1, 1)
bones/15/rotation = Quaternion(0.0342507, 0.00434292, 0.0287085, 0.998991)
bones/15/scale = Vector3(1, 1, 1)
bones/16/rotation = Quaternion(-0.593276, -0.0113852, -0.0307256, 0.804332)
bones/16/scale = Vector3(1, 1, 1)
bones/17/rotation = Quaternion(0.996866, -0.0301062, 0.00423716, 0.073039)
bones/17/scale = Vector3(1, 1, 1)
bones/18/rotation = Quaternion(0.0342507, -0.00434292, -0.0287085, 0.998991)
bones/18/scale = Vector3(1, 1, 1)
bones/19/rotation = Quaternion(-0.593276, 0.0113852, 0.0307256, 0.804332)
bones/19/scale = Vector3(1, 1, 1)

[node name="Swapeffect" type="MeshInstance3D" parent="Character"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25474, 0)
visible = false
mesh = SubResource("BoxMesh_2uy2n")
skeleton = NodePath("../..")

[connection signal="timeout" from="SwapCooldownTimer" to="." method="_on_swap_cooldown_timer_timeout"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]

[editable path="Character"]
